<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtTituloApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:background="@color/vermelho"
                android:gravity="center_horizontal"
                android:text="@string/txt_titulo"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPrimeiroNome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_primeiro_nome"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/editSobrenomeAluno"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_sobrenome"
                android:inputType="text"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editNomeCurso"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_nome_do_curso_desejado"
                android:inputType="text"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTelefoneContato"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_telefone_de_contato"
                android:inputType="text"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textListaSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/vermelho"
                android:gravity="center_horizontal"
                android:text="@string/txt_selecione_um_curso"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/corBotoes"
                    android:text="@string/txt_buttom_limpar" />

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/corBotoes"
                    android:text="@string/txt_buttom_salvar" />

            </LinearLayout>

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/corBotoes"
                android:text="@string/txt_buttom_finalizar" />

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>